--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -84,7 +84,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://formstack.applytojob.com/apply/okWvPyTidz/Privacy-And-Compliance-Analyst?source=GS'>Privacy and Compliance Analyst - Formstack - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://formstack.applytojob.com/apply/okWvPyTidz/Privacy-And-Compliance-Analyst?source=GS'>Privacy and Compliance Analyst - Formstack - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Privacy and Compliance Analyst at Formstack in (Multiple states).</p>
 <hr/>
@@ -138,15 +138,15 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/betsson/jobs/1867038'>Job Application for Data Privacy Specialist  at Betsson Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/betsson/jobs/1867038'>Job Application for Data Privacy Specialist  at Betsson Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/toyotaconnected/jobs/4425562002'>Job Application for Data Privacy Analyst at Toyota Connected</a></h5> 
+<h5><a href='https://boards.greenhouse.io/toyotaconnected/jobs/4425562002'>Job Application for Data Privacy Analyst at Toyota Connected</a></h5> 
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/palantir/4a380c96-04a4-44b6-aa5b-34bff3786645'>Palantir Technologies - Privacy and Civil Liberties Software Engineer, Internship</a></h5> 
+<h5><a href='https://jobs.lever.co/palantir/4a380c96-04a4-44b6-aa5b-34bff3786645'>Palantir Technologies - Privacy and Civil Liberties Software Engineer, Internship</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-09-22</p>
 <hr/>
@@ -188,7 +188,7 @@ trust?...</p>
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://verder.recruitee.com/o/cyber-security-privacy-specialist-vleuten'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verder.recruitee.com/o/cyber-security-privacy-specialist-vleuten'>
       Cyber Security & Privacy Specialist - Verder
     </a></h5> 
 <p><span class="badge badge-light">Vleuten, Netherlands</span></p>
@@ -244,7 +244,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563?gh_src=DataPrivacyCareers'>Job Application for Sr. Differential Privacy Research Engineer at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563?gh_src=DataPrivacyCareers'>Job Application for Sr. Differential Privacy Research Engineer at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Sr. Differential Privacy Research Engineer, Mozilla Corporation, Mountain View, 
 CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...</p>
@@ -278,7 +278,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/uipath/ece4e548-8d0b-4068-b6a7-72306af7d690'>UiPath - US privacy specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/ece4e548-8d0b-4068-b6a7-72306af7d690'>UiPath - US privacy specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -290,7 +290,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=szvPjhwY&__jvsc=Twitter&bid=nCK3AKwe'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=szvPjhwY&__jvsc=Twitter&bid=nCK3AKwe'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
@@ -302,7 +302,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Jun 19, 2019 ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/1901group/job/otyqafwl'>1901 Group Careers - Security &amp; Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/1901group/job/otyqafwl'>1901 Group Careers - Security &amp; Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
@@ -401,7 +401,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -417,7 +417,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/267449eb-6bf6-4f01-8cb5-e22ed58d9edb'>Netflix - Technical Program Manager - Privacy Assurance and Engineering</a></h5> 
+<h5><a href='https://jobs.lever.co/netflix/267449eb-6bf6-4f01-8cb5-e22ed58d9edb'>Netflix - Technical Program Manager - Privacy Assurance and Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
